# facebook_marketplace_search

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  qa-report-v1.md  runbook.md  test-plan.md
scripts/: setup.py
specs/: v1.md
src/fb_marketplace_search/: __init__.py  cli.py  config.py
src/fb_marketplace_search/diff/: __init__.py  differ.py
src/fb_marketplace_search/driver/: __init__.py  browser.py  login.py  search_runner.py  selectors.py
src/fb_marketplace_search/normalize/: __init__.py  listing.py
src/fb_marketplace_search/output/: __init__.py  formatter.py
src/fb_marketplace_search/parser/: __init__.py  query_parser.py  tokens.py
src/fb_marketplace_search/storage/: __init__.py  db.py  schema.py
src/fb_marketplace_search/validate/: __init__.py  pipeline.py  validators.py
tests/: conftest.py
tests/fixtures/: listing_detail_currency_usd.html  results_page_empty.html  results_page_size11_clean.html  results_page_size11_dirty.html
tests/integration/: test_currency_mismatch.py  test_diff_price_changed.py  test_harvest_fixtures.py  test_pipeline_persistence.py  test_politeness_gate.py  test_revalidate_every_run.py  test_wedge_e2e.py
tests/smoke/: test_smoke.py
tests/unit/: test_ambiguity_triggers.py  test_diff.py  test_normalize.py  test_parser.py  test_recency_spec_8_2.py  test_render_units.py  test_size_validator_wedge.py  test_storage.py  test_validators_other.py  test_within_run_dedup.py
